<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_activity_background_gradient"  >
    
	<TextView
	    android:id="@+id/taskName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="#2b2b2b"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_name"
	    android:textColor="#fff"
	    android:textSize="16sp" />
    
	<TextView
	    android:id="@+id/taskCategory"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="82dp"
	    android:background="#234e81"
	    android:maxLines="2"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_category"
	    android:textColor="#fff" />
	
	<TextView
	    android:id="@+id/taskAssignedTo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="210dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="82dp"
	    android:maxLines="2"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_assigned"
	    android:textColor="#fff" />
	
	<TextView 
	    android:id="@+id/taskEndDate"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/adapter_task_end_date"
	    android:layout_marginTop="47dp"
	    android:layout_marginLeft="220dp"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp" />

	<TextView
	    android:id="@+id/taskStartDate"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/taskEndDate"
	    android:layout_alignBottom="@+id/taskEndDate"
	    android:layout_alignLeft="@+id/taskName"
	    android:layout_alignRight="@+id/taskName"
	    android:background="#234e81"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_start_date"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/taskDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/taskCategory"
	    android:layout_alignRight="@+id/taskCategory"
	    android:layout_below="@+id/taskCategory"
	    android:background="#194574"
	    android:maxLines="3"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_description"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/taskPriority"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/taskAssignedTo"
	    android:layout_below="@+id/taskName"
	    android:background="#234e81"
	    android:maxLines="3"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_priority"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/taskStatus"
	    android:layout_width="20dp"
	    android:layout_height="20dp"
	    android:layout_alignBaseline="@+id/taskName"
	    android:layout_alignBottom="@+id/taskName"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/circle_green"
	    android:paddingBottom="5dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="5dp"
	    android:textColor="#000" />

	<TextView
	    android:id="@+id/taskEdit"
	    android:layout_width="wrap_content"
	    android:layout_height="25dp"
	    android:layout_alignTop="@+id/taskStatus"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="-15dp"
	    android:layout_toLeftOf="@+id/taskStatus"
	    android:background="@drawable/rounded_border_grey"
	    android:contentDescription="@string/project_type_prompt"
	    android:paddingBottom="5dp"
	    android:paddingLeft="15dp"
	    android:paddingRight="15dp"
	    android:paddingTop="5dp"
	    android:text="@string/button_edit"
	    android:textColor="#fff"
	    android:textSize="12sp" />
	
</RelativeLayout>
