<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_activity_background_gradient"  >
    
	<TextView
	    android:id="@+id/eventName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="#2b2b2b"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/create_event_txt_name"
	    android:textColor="#fff"
	    android:textSize="16sp" />
	
	<TextView
	    android:id="@+id/eventDescription"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/eventLocation"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="#194574"
	    android:maxLines="3"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_project_description"
	    android:textColor="#fff" />
    
	<TextView
	    android:id="@+id/eventLocation"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="82dp"
	    android:layout_toLeftOf="@+id/eventEdit"
	    android:background="#234e81"
	    android:maxLines="2"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/create_event_txt_location"
	    android:textColor="#fff" />
	
	<TextView
	    android:id="@+id/eventDate"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/eventDescription"
	    android:layout_alignTop="@+id/eventLocation"
	    android:layout_marginLeft="220dp"
	    android:layout_marginRight="10dp"
	    android:background="#234e81"
	    android:maxLines="2"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/create_event_txt_date"
	    android:textColor="#fff" />
	
	<TextView
	    android:id="@+id/eventStartTime"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/eventName"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="47dp"
	    android:background="#234e81"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/create_event_txt_start_time"
	    android:textColor="#fff"
	    android:typeface="sans" />
	
	<TextView 
	    android:id="@+id/eventEndTime"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/create_event_txt_end_time"
	    android:layout_marginTop="47dp"
	    android:layout_marginLeft="220dp"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp" />

	<ImageView
	    android:id="@+id/eventMap"
	    android:layout_width="25dp"
	    android:layout_height="25dp"
	    android:layout_alignParentRight="true"
	    android:layout_alignTop="@+id/eventEdit"
	    android:layout_marginRight="20dp"
	    android:layout_marginTop="-3dp"
	    android:background="@drawable/google_maps_icon"
	    android:contentDescription="@string/event_type_prompt"
	    android:textSize="12sp" />

	<TextView
	    android:id="@+id/eventEdit"
	    android:layout_width="wrap_content"
	    android:layout_height="25dp"
	    android:layout_alignBaseline="@+id/eventName"
	    android:layout_alignBottom="@+id/eventName"
	    android:layout_alignLeft="@+id/eventEndTime"
	    android:layout_marginBottom="3dp"
	    android:layout_marginLeft="-10dp"
	    android:background="@drawable/rounded_border_grey"
	    android:contentDescription="@string/event_type_prompt"
	    android:paddingBottom="5dp"
	    android:paddingLeft="15dp"
	    android:paddingRight="15dp"
	    android:paddingTop="5dp"
	    android:text="@string/button_edit"
	    android:textColor="#fff"
	    android:textSize="12sp" />
	
</RelativeLayout>
