<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/style_activity_background_gradient"
	    android:paddingTop="20dp" >
	
		    <TextView
		        android:id="@+id/txtCreateProjectUserHelp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:paddingBottom="50dp"
		        android:paddingLeft="5dp"
		        android:text="@string/create_project_lbl_userhelp"
		        android:textColor="#FFF"
		        android:textSize="16sp" />
		
		    <Button
		        android:id="@+id/btnCreateProject"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_marginTop="540dp"
		        android:background="#8bc425"
		        android:minHeight="60dp"
		        android:text="@string/button_create"
		        android:textColor="#fff"
		        android:textSize="16sp" />
		
		    <!-- Delete project -->
		
		    <Button
		        android:id="@+id/btnDeleteProject"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/btnCreateProject"
		        android:background="#cb293c"
		        android:minHeight="60dp"
		        android:text="@string/button_delete"
		        android:textColor="#fff"
		        android:textSize="16sp" />
	
		    <TextView
		        android:id="@+id/txtCreateProjectName"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/txtCreateProjectUserHelp"
		        android:layout_alignParentLeft="true"
		        android:layout_marginBottom="14dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/create_project_lbl_name"
		        android:textColor="#fff"
		        android:textSize="14sp" />
	
		    <EditText
		        android:id="@+id/editCreateProjectName"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignTop="@+id/txtCreateProjectName"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="21dp"
		        android:background="#FFF"
		        android:ems="10"
		        android:gravity="left"
		        android:hint="@string/create_project_edit_name"
		        android:inputType="textPersonName"
		        android:maxLength="20"
		        android:nextFocusForward="@+id/editCreateProjectDescription"
		        android:paddingBottom="15dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:paddingTop="15dp"
		        android:textColor="#000"
		        android:textSize="13sp" />

		    <EditText
		        android:id="@+id/editCreateProjectEndDate"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/txtCreateProjectEndDate"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="5dp"
		        android:background="#FFF"
		        android:ems="10"
		        android:focusable="false"
		        android:gravity="left"
		        android:hint="@string/create_project_edit_finish_date_hint"
		        android:inputType="date"
		        android:maxLength="10"
		        android:paddingBottom="15dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:paddingTop="15dp"
		        android:textColor="#000"
		        android:textSize="13sp" />

		    <TextView
		        android:id="@+id/txtCreateProjectEndDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/editCreateProjectStartDate"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="18dp"
		        android:text="@string/create_project_lbl_finish_date"
		        android:textColor="#fff"
		        android:textSize="14sp" />

		    <EditText
		        android:id="@+id/editCreateProjectStartDate"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/txtCreateProjectStartDate"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="5dp"
		        android:background="#FFF"
		        android:ems="10"
		        android:focusable="false"
		        android:gravity="left"
		        android:hint="@string/create_project_edit_start_date_hint"
		        android:inputType="date"
		        android:maxLength="10"
		        android:paddingBottom="15dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:paddingTop="15dp"
		        android:textColor="#000"
		        android:textSize="13sp" >

		        <requestFocus />
		    </EditText>

		    <TextView
		        android:id="@+id/txtCreateProjectStartDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/editCreateProjectName"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="18dp"
		        android:text="@string/create_project_lbl_start_date"
		        android:textColor="#fff"
		        android:textSize="14sp" />

		    <Spinner
		        android:id="@+id/editCreateProjectType"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/txtCreateProjectType"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="5dp"
		        android:background="#FFF"
		        android:ems="10"
		        android:entries="@array/project_type_array"
		        android:gravity="center"
		        android:hint="@string/create_project_edit_type"
		        android:inputType="text"
		        android:maxLength="15"
		        android:paddingBottom="15dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:paddingTop="15dp"
		        android:prompt="@string/project_type_prompt"
		        android:textColor="#000"
		        android:textSize="13sp" />

		    <TextView
		        android:id="@+id/txtCreateProjectType"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/editCreateProjectEndDate"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="22dp"
		        android:text="@string/create_project_lbl_type"
		        android:textColor="#fff"
		        android:textSize="14sp" />

		    <TextView
		        android:id="@+id/txtCreateProjectDescription"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/editCreateProjectType"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="20dp"
		        android:text="@string/create_project_lbl_description"
		        android:textColor="#fff"
		        android:textSize="14sp" />

		    <EditText
		        android:id="@+id/editCreateProjectDescription"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/txtCreateProjectDescription"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:layout_marginTop="5dp"
		        android:background="#FFF"
		        android:ems="10"
		        android:gravity="left"
		        android:hint="@string/create_project_edit_description"
		        android:inputType="textMultiLine"
		        android:maxLength="100"
		        android:paddingBottom="15dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:paddingTop="15dp"
		        android:textColor="#000"
		        android:textSize="13sp" />
	
	</RelativeLayout>

</ScrollView>

